Creating middleware to refresh a user session
